--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "jsdom": "^23.0.1"
-  }
+    "chalk": "^5.3.0",
+    "chalk-animation": "^2.0.3",
+    "inquirer": "^9.2.12",
+    "jsdom": "^23.0.1",
+    "nanospinner": "^1.1.0",
+    "prompt-sync": "^4.2.0"
+  },
+  "type": "module"
 }
