--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "jest": "^29.7.0"
   },
+  "bin": "./main.js",
   "dependencies": {
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
