--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/oualeeed/nodejs-web-crawler.git"
+    "url": "https://github.com/oualeeed/nodejs-web-crawler"
   },
   "author": "Oualid EL-FERAOUI",
   "license": "ISC",
